# moz-cli-version-check

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  test-version-check.sh
src/: lib.rs
